welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: type mismatch;
 found   : Unit
 required: Int
		else if ((tea==candy*2 || candy==tea*2)) return 2
                     ^